--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>Paola Solano Distribuida test</p>
+    <p>Paola Solano Distribuida test paola</p>
 </body>
 </html>
